--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -3,6 +3,6 @@
 # Ansible managed
 #
 repository:
-  description: installs benthos
+  description: Installs benthos
   homepage: https://buluma.github.io/
   topics: benthos, ansible, molecule, tox, playbook
