--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,9 +12,6 @@ galaxy_info:
     - name: Alpine
       versions:
         - all
-    - name: Archlinux
-      versions:
-        - all
     - name: Debian
       versions:
         - bookworm
@@ -31,4 +28,8 @@ galaxy_info:
       versions:
         - focal
         - jammy
+
+  galaxy_tags:
+    - benthos
+
 dependencies: []
