Update files using ansible-generator

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,4 +5,4 @@
 repository:
   description: Installs benthos
   homepage: https://buluma.github.io/
-  topics: benthos, ansible, molecule, tox, playbook
+  topics: benthos, ansible, molecule, playbook
