--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,24 +5,24 @@ galaxy_info:
   description: Installs benthos
   role_name: benthos
   license: MIT
-  min_ansible_version: '1.2'
+  min_ansible_version: "1.2"
   namespace: andrewrothstein
   platforms:
     - name: Alpine
       versions:
         - all
-  - name: Debian
-    versions:
-    - all
-  - name: EL
-    versions:
-    - all
-  - name: Fedora
-    versions:
-    - all
-  - name: Ubuntu
-    versions:
-    - all
+    - name: Debian
+      versions:
+        - all
+    - name: EL
+      versions:
+        - all
+    - name: Fedora
+      versions:
+        - all
+    - name: Ubuntu
+      versions:
+        - all
   galaxy_tags:
     - benthos
 dependencies: []
